1-pod.yml
apiVersion: v1
kind: Pod
metadata:
    name: mimicchio
    labels:
        app: mimicchio
spec:
    containers:
        - name: k8s-mimicchio
          image: mts88/sample1:1.0.2
          ports:
            - name: nodejs-port
              containerPort: 3000
