11-config.yml
apiVersion: v1
kind: Pod
metadata:
  name: mimicchio-pod
  labels:
    name: mimicchio
spec:
  containers:
  - name: k8s-mimicchio
    image: mts88/sample2:1.0.1
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - name: mimicchio2-port
        containerPort: 3001
