4-service.yml
apiVersion: v1
kind: Service
metadata: 
    name: mimicchio-service
spec:
    ports:
        - port: 31001
          nodePort: 31001
          targetPort: nodejs-port
          protocol: TCP
    selector:
        app: mimicchio
    type: NodePort
