8-secrets.yml
#
# Pod Definitions
#
apiVersion: v1
kind: Pod
metadata:
    name: mimicchio
    labels:
        app: mimicchio
spec:
    containers:
      - name: k8s-mimicchio
        image: mts88/sample1:1.0.3
        ports:
          - name: nodejs-port
            containerPort: 3000
---
#
# Service definition (exposing)
#
apiVersion: v1
kind: Service
metadata: 
    name: mimicchio-service
spec:
    ports:
        - port: 31001
          nodePort: 31001
          targetPort: nodejs-port
          protocol: TCP
    selector:
        app: mimicchio
    type: NodePort
